optimisation after switch from Java17 to Java25