@@ -97,7 +97,7 @@ public class CodeSystemResourceStorage extends BaseFhirResourceHandler {
     List<AssociationType> associationTypes = List.of(new AssociationType("is-a", AssociationKind.codesystemHierarchyMeaning, true));
     CodeSystemImportAction action = new CodeSystemImportAction().setActivate(PublicationStatus.active.equals(codeSystem.getStatus()));
     CodeSystem cs = importService.importCodeSystem(CodeSystemFhirMapper.fromFhirCodeSystem(codeSystem), associationTypes, action);
-    return load(cs.getId(), cs.getVersions().get(0).getVersion());
+    return load(cs.getId(), cs.getVersions().getFirst().getVersion());
   }
 
   @Override
